--- a/newFront/Rooms/RoomSelect.css
+++ b/newFront/Rooms/RoomSelect.css
@@ -50,7 +50,7 @@
     margin-left: auto;
     margin-right: auto;
     z-index: 1;
-    box-shadow: 0px 10px #b25544 inset;
+    box-shadow: 0px -10px #b25544 inset;
 }
 
 #mainJoinShell{
@@ -59,6 +59,7 @@
     width: 192px;
     
     margin: 34px auto 10px auto;
+    box-shadow: 0px -10px #fde1c0 inset
 }
 
 #idRoomInput{
@@ -72,6 +73,7 @@
     border: none;
     background-color: #F2654B;
     color:#434243;
+    box-shadow: 0px -10px #fde1c0 inset
 }
 #idRoomInput:focus, textarea:focus{
     outline:none;
