--- a/newFront/Rooms/RoomSelect.css
+++ b/newFront/Rooms/RoomSelect.css
@@ -1,5 +1,4 @@
-#roomSelect
-{
+#roomSelect{
     height: 500px;
     width: 100%;
     padding-bottom: 0px;
@@ -50,7 +49,7 @@
     margin-left: auto;
     margin-right: auto;
     z-index: 1;
-    box-shadow: 0px -10px #b25544 inset;
+    box-shadow: 0px -7px #b25544 inset;
 }
 
 #mainJoinShell{
@@ -58,10 +57,9 @@
     flex-direction: row;
     width: 192px;
     
-    margin: 34px auto 10px auto;
-    box-shadow: 0px -10px #fde1c0 inset
+    margin: 34px auto 54px auto;
+    box-shadow: 0px -20px #fde1c0 inset
 }
-
 #idRoomInput{
     width: 110px;
     height: 40px;
@@ -73,7 +71,7 @@
     border: none;
     background-color: #F2654B;
     color:#434243;
-    box-shadow: 0px -10px #fde1c0 inset
+    box-shadow: 0px -20px #fde1c0 inset
 }
 #idRoomInput:focus, textarea:focus{
     outline:none;
@@ -83,14 +81,9 @@
     opacity: 1;
     color: #b8a58f;
 }
-#subrayadoClaro
-{
-    position: relative;
-    top: -15px;
-    width: 200px;
-    height: 14px;
-    margin: 0 auto 30px auto;
-    background-color: #fde1c0;
+.arrowShell{
+    padding-top: 13px;
+    color:#b25544;
 }
 
 #sideTicketPart{
@@ -119,13 +112,15 @@
 }
 #sideTicketPart>p{
     height: 20px;
-    width: 180px;
+    width: 140px;
 
-    font-size: 15px;
+    font-size: 15px; 
     color:#413e3f;
     text-align: center;
 
     margin:5px auto 5px auto ;
+
+    box-shadow: 0px -10px #fde1c0 inset
 }
 
 #createButton{
