--- a/newFront/Header/Header.css
+++ b/newFront/Header/Header.css
@@ -4,29 +4,92 @@
     flex-direction: row;
 
     width: 100%;
-    height: 80px;
+    height: 100px;
 
-    background-color:#b25544 ;
+    background-color:#b25544;
 }
-
-#nameChangeContainer{
-    width: 200px;
-}
-#newNameInput{
-
-}
-#sendNewName{
-
-}
-
 
 #imgHeaderShell{
-    width: 100px;
-    height: 80px;
+    width: 120px;
+    height: 100px;
+
+    padding-right: 20px;
+
+    border-right: 2px solid #fde1c0;
 }
 #imgHeader{
     width: 100px;
     height: 80px;
+
+    padding-top: auto;
+    padding-bottom: auto;
+
+    margin: 10px 20px 0 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#nameChangeContainer{
+    display: flex;
+    flex-direction: column;
+
+    font-size: 20px;
+    color: #b8a58f;
+
+    width: 120px;
+    height: 100px;
+
+    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+
+    border-right: 2px solid #fde1c0;
+}
+#newNameInput{
+    width: 100px;
+    height: 30px;
+    margin: 27px auto 0 auto;
+
+
+    border-radius: 10px;
+    border: none;
+
+    background-color: transparent;
+    color: #434243;
+
+    font-size: 20px;
+
+    transition: 1s;
+}
+#newNameInput::placeholder{
+    text-align: center;
+    opacity: 1;
+    color: #b8a58f;
+}
+#newNameInput:focus, textarea:focus{
+    outline:none;
+}
+#newNameInput:hover{
+    border:1px solid #fde1c0;
+}
+
+
+#sendNewName{
+    width: 104px;
+    height: 30px;
+    margin: 0 auto 27px auto;
+    padding:0;
+
+    background-color: transparent;
+    color:#b8a58f;
+
+    border: none;
+    border-radius: 5px;
+
+    transition: 1s;
+}
+#sendNewName:hover{
+    border:1px solid #fde1c0;
 }
 
 #infoContainer{
