--- a/newFront/Header/Header.css
+++ b/newFront/Header/Header.css
@@ -6,7 +6,10 @@
     width: 100%;
     height: 100px;
 
-    background-color:#b25544;
+    border-bottom: 3px solid #b8a38d;
+
+    background-color:#F2654B;
+    box-shadow: 0px 10px #c59257;
 }
 
 #imgHeaderShell{
@@ -15,11 +18,11 @@
 
     padding-right: 20px;
 
-    border-right: 2px solid #fde1c0;
+    border-right: 2px solid #b8a38d;
 }
 #imgHeader{
     width: 100px;
-    height: 80px;
+    height: 70px;
 
     padding-top: auto;
     padding-bottom: auto;
@@ -43,19 +46,25 @@
     margin-left: 20px;
     margin-right: 20px;
 
-    border-right: 2px solid #fde1c0;
+    border-right: 2px solid #b8a38d;
+    
+}
+#nameImputCont{
+    width: 100px;
+    height: 30px;
+    margin: 27px auto 0 auto;
+    box-shadow: 0px -10px #fde1c0 inset;
 }
 #newNameInput{
     width: 100px;
     height: 30px;
-    margin: 27px auto 0 auto;
-
 
     border-radius: 10px;
     border: none;
 
     background-color: transparent;
     color: #434243;
+    
 
     font-size: 20px;
 
@@ -73,18 +82,24 @@
     border:1px solid #fde1c0;
 }
 
-
+#sendCont{
+    width: 104px;
+    height: 30px;
+    margin: 0 auto 20px auto;
+    box-shadow: 0px -10px #fde1c0 inset;
+}
 #sendNewName{
     width: 104px;
     height: 30px;
-    margin: 0 auto 27px auto;
     padding:0;
+    margin: auto;
 
     background-color: transparent;
-    color:#b8a58f;
-
+    color:#434243;
+    
     border: none;
     border-radius: 5px;
+    
 
     transition: 1s;
 }
@@ -93,13 +108,57 @@
 }
 
 #infoContainer{
-    display: flexbox;
+    display: flex;
     flex-wrap: wrap;
 
     width: 600px;
+
+    border-right: 2px solid #b8a38d;
 }
 
 #infoContainer>p{
+    width: 30%;
+    height: 20px;
+    padding:13px 10px 0px 0;
+    margin: 0px 0px 10px 0;
+
+    font-size: 15px;
+    
+
     color: #fde1c0;
-    font-size: 13px;
+    box-shadow: 0px -10px #b25544 inset;
+}
+
+#initGameContainer{
+    width: 110px;
+    height: 100px;
+    margin-left: 20px;
+
+    background-image: url('../img/pulley.png');
+
+    margin-top: auto;
+    margin-bottom: auto;
+}
+#initGame{
+    position: relative;
+    top: -65px;
+
+    width: 110px;
+    height: 25px;
+    font-size: 15px;
+
+    background-color: transparent;
+    border: none;
+
+    box-shadow: 0px -10px #fde1c0 inset;
+    color: #434243;
+}
+#initGame:hover{
+
+}
+#leverInit{
+    padding-left: 20px;
+
+    font-size: 100px;
+    color:#b25544;
 }
