--- a/newFront/Players/Player/Player.css
+++ b/newFront/Players/Player/Player.css
@@ -1,16 +1,33 @@
 .player{
     width: 18%;
-    height: 94px;
+    height: 96px;
     margin: 0;
 
     background-color: #F2654B;
     box-shadow: 10px 10px #c59257;
-    border: 1.5px dashed  #b8a38d;
+    border: 2px dashed  #b8a38d;
 }
 
-.player>p{
+.playerP{
+    width: 80px;
+    height: 20px;
+    margin: 0 auto 5px auto;
+    margin-top: 0;
+    margin-bottom: 0;
+
     text-align: center;
-    
+    font-size: 15px;
+
     color: #fde1c0;
     box-shadow: 0px -7px #b25544 inset;
+}
+
+.estado{
+    height: 30px;
+    margin: 0 auto 0px auto;
+
+    font-size: 30px;
+    text-align: center;
+    
+    color:#fde1c0;
 }
