--- a/newFront/Players/Player/Player.css
+++ b/newFront/Players/Player/Player.css
@@ -24,7 +24,7 @@
 
 .estado{
     height: 30px;
-    margin: 0 auto 0px auto;
+    margin: 5px auto 0px auto;
 
     font-size: 30px;
     text-align: center;
