--- a/newFront/Header/Header.css
+++ b/newFront/Header/Header.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100px;
 
-    border-bottom: 3px solid #b8a38d;
+    border-bottom: 3px dashed #c59257;/*#b8a38d*/
 
     background-color:#F2654B;
     box-shadow: 0px 10px #c59257;
