--- a/newFront/Stats/Stats.css
+++ b/newFront/Stats/Stats.css
@@ -17,6 +17,7 @@
     box-shadow: 10px 10px #c59257;
 
     border: 2px solid #b8a38d;
+    border-bottom: 2px dashed #b8a38d;
 }
 
 #lawLayoutShell{
@@ -31,16 +32,53 @@
     height: 80px;
     margin: 10px 0.75% 10px 0.75%;
 
-    background-color: lightblue;
+    background-color:#5ca6c5 ;/*#497a9c*/
+    box-shadow: 3px 3px #b64c39;
 
     border-radius: 5px;
+    border: 2px dashed #b64c39;
+    border-top: 2px dashed #F2654B;
+    border-left: 2px dashed #F2654B;
+}
+#blueBorder{
+    display: flex;
+    flex-direction: row;
+
+    width: 94%;
+    height: 55px;
+    margin: 5px auto 5px auto;
+
+
+    border-radius: 5px;
+    border: 5px solid #394f76;
+    border-left: 2% solid #394f76;
+    border-right: 2% solid #394f76;
+}
+#thinBlueBorder{
+    width: 98%;
+    height: 75px;
+    margin: auto;
+
+    border: 1px solid #394f76;
 }
 .blueLaw{
-    width: 40px;
-    height: 50px;
+    width: 17%;
+    height: 55px;
+    margin: auto;
 
-    background-color: blue;
+    border: 1px solid #394f76;
+}
+.blueIcon{
+    width: 70%;
+    height: 30px;
+    color: #394f76;
+    font-size: 25px;
 
+    margin-top: 5px;
+    margin-left: 5px;
+}
+.fontAweDove{
+    margin: auto;
 }
 
 .redLawShell{
@@ -51,26 +89,144 @@
     height: 80px;
     margin: 10px 0.75% 10px 0.75%;
 
-    background-color: lightcoral;
+    background-color: #fa6923;
+    box-shadow: 3px 3px #b64c39;
+
+    border-radius: 5px;
+    border: 2px dashed #b64c39;
+    border-top: 2px dashed #F2654B;
+    border-left: 2px dashed #F2654B;
+}
+#thinRedBorder{
+    width: 98%;
+    height: 75px;
+    margin: auto;
+
+    border: 1px solid #d53f1e;
+}
+#redBorder{
+    display: flex;
+    flex-direction: row;
+
+    width: 94%;
+    height: 55px;
+    margin: 5px auto 5px auto;
+
+    border-radius: 5px;
+    border: 5px solid #d53f1e;
+    border-left: 2% solid #d53f1e;
+    border-right: 2% solid #d53f1e;
+}
+.redLaw{
+    width: 19.8%;
+    height: 55px;
+    margin: auto;
+
+    color:#d53f1e;
+
+    border: 1px solid #d53f1e;
+    padding: 7.5px auto 7.5px auto;
+
+}
+.redIcon{
+    width: 70%;
+    height: 30px;
+    color: #d53f1e;
+    font-size: 25px;
+    margin-top: 5px;
+    margin-left: 5px;
+
+}
+.fontAweSkull{
+    margin: auto;
+}
+
+#stacksCounters{
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: space-evenly;
+
+    width: 100%;
+    height: 90px;
+
+    background-color: #F2654B;
+    box-shadow: 10px 10px #c59257;
+
+    border: 2px solid #b8a38d;
+    border-top: 2px dashed #b8a38d;
+}
+.stackLayoutShell{
+    width: 100px;
+    height: 80px;
+    margin: 5px 0% 5px 0%;
+    
+    background-color: #f6d399;
+    box-shadow: 3px 3px #b64c39;
 
     border-radius: 5px;
 }
-.redLaw{
-    width: 50px;
-    height: 50px;
-    background-color: red;
+#stackBorder{
+    width: 60px;
+    height: 40px;
+    margin: 5px;
+
+    text-align: center;
+    color:#161d1e;
+
+    border: 15px solid #6b5041;
+    border-radius: 5px;
+}
+#stackBorder>p{
+    position: relative;
+    top: -15px;
+    left: -0px;
+
+    height: 14px;
+    width: 60px;
+    margin-top:0;
+    margin-bottom: 0;
+
+    font-size: 14px;
+
+    color: #f6d399;
+    background-color: #6b5041;
 }
 
-
-.stackLayoutShell{
-    width: 100px;
-    height: 100px;
-    background-color: #b25544;
-}
 
 #skippedTurnsShell{
     width: 200px;
+    height: 80px;
+    margin: 5px 0% 5px 0%;
+    
+    background-color: #f6d399;
+    box-shadow: 3px 3px #b64c39;
+
+    border-radius: 5px;
+}
+#borderSkipped{
+    width: 160px;
     height: 40px;
+    margin: 5px;
+
+    text-align: center;
+    color:#161d1e;
+
+    border: 15px solid #6b5041;
+    border-radius: 5px;
+}
+#borderSkipped>p{
+    position: relative;
+    top: -15px;
+    left: -0px;
+
+    height: 14px;
+    width: 160px;
+    margin: 0;
+
+    font-size: 14px;
+
+    color: #f6d399;
+    background-color: #6b5041;
 }
 .skippedTurns{
     height: 30px;
