--- a/newFront/Hud/Hud.css
+++ b/newFront/Hud/Hud.css
@@ -2,22 +2,23 @@
     display: flex;
     flex-direction: row;
 
-    width: 100%;
-    height: 300px;
+    width: 600px;
+    height: 320px;
 
 
     background-color: #b25544;
-    box-shadow: 0px 10px #c59257;
+    box-shadow: 10px 10px #c59257;
 
     border-top: 2px dashed #fbb969;
     border-bottom: 2px dashed #c59257;
+    border-right: 2px dashed #c59257;
 }
 
 .hudShell{
-    width: 24%;
+    width: 296px;
     height: 300px;
     margin: 0px 0 0px 0;
 
-    border-left: 1px dashed #b8a38d;
-    border-right: 1px dashed #b8a38d;
+    /* border-left: 1px dashed #b8a38d; */
+    border-right: 2px dashed #b8a38d;
 }
