--- a/newFront/Hud/PowerSelect/DeckExam.css
+++ b/newFront/Hud/PowerSelect/DeckExam.css
@@ -1,12 +1,12 @@
 #deckExamContainer{
-    width: 280px;
-    height: 300px;
-    margin: 10px;
+    width: 260px;
+    height: 290px;
+    margin: 10px 5px 10px 5px;
 }
 #deckExFlavor{
     height: 15px;
     width: 240px;
-    margin: 0px 20px 0px 20px;
+    margin: 0px 10px 0px 10px;
 
     text-align: center;
     font-size: 15px;
@@ -14,38 +14,55 @@
     font-style: italic;
 
     color: #fde1c0;
-    box-shadow: 0px -7px #b25544 inset;
+    box-shadow: 0px -5px #b25544 inset;
 }
 #closeDeckExam{
     width: 60px;
     height: 20px;
-    margin: 0px 90px 10px 90px;
+    margin: 0px 100px 10px 100px;
 
     font-size: 17px;
     text-align: center;
 
     background-color: transparent;
     color: #434243;
-    box-shadow: 0px -10px #fde1c0 inset;
+    box-shadow: 0px -7px #fde1c0 inset;
+
+    border: none;
+}
+#closeDeckExam:hover{
+    cursor: pointer;
 }
 
 .shellShowRed,.shellShowBlue{
+    width: 200px;
+    height: 40px;
+    margin: 10px 30px 10px 30px;
 
+    
+    box-shadow: 3px 3px #b64c39;
+    border-radius: 5px;
 }
 .shellShowRed{
-
+    background: linear-gradient(90deg, rgba(250,105,35,1) 0%, rgba(246,211,153,1) 50%);
 }
 .shellShowBlue{
-
+    background: linear-gradient(90deg, rgba(92,166,197,1) 0%, rgba(246,211,153,1) 50%);
 }
 
 
 .innerShowRed,.innerShowBlue{
+    position: relative;
+    top: 10px;
+
+    width: 180px;
+    height: 20px;
+    margin:auto;
 
 }
 .innerShowRed{
-
+    background: linear-gradient(90deg, rgba(213,63,30,1) 0%, rgba(107,80,65,1) 50%);
 }
 .innerShowBlue{
-    
+    background: linear-gradient(90deg, rgba(57,79,118,1) 0%, rgba(107,80,65,1) 50%);;
 }
