--- a/newFront/Hud/SelectCh/ChCandidate.css
+++ b/newFront/Hud/SelectCh/ChCandidate.css
@@ -17,8 +17,8 @@
     font-size: 15px;
 
     border: 5px solid #6b5041;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
 
     color: #6b5041;
     background-color: transparent;
@@ -30,6 +30,7 @@
     height: 40px;
 
     background-color: #6b5041;
+    box-shadow: 5px 5px #8e4336;
 
     transition: 0.2s;
 }
