--- a/newFront/Hud/PowerSelect/PmSelect.css
+++ b/newFront/Hud/PowerSelect/PmSelect.css
@@ -1,13 +1,15 @@
-#killSelectContainer{
+#pmSelectContainer{
     margin-left: 10px;
 }
+#pmSlFlavor{
+    position: relative;
+    left: -10px;
 
-#killSlFlavor{
     height: 15px;
-    width: 240px;
-    margin: 0px 20px 0px 20px;
+    width: 270px;
+    margin: 0px 0px 0px 0px;
 
-    text-align: center;
+    /* text-align: center; */
     font-size: 15px;
     font-weight: bolder;
     font-style: italic;
@@ -15,8 +17,7 @@
     color: #fde1c0;
     box-shadow: 0px -7px #b25544 inset;
 }
-
-#killContainer{
+#pmContainer{
     display: flex;
     flex-wrap: wrap;
     height: 230px;
@@ -24,7 +25,7 @@
     padding: 5px;
 }
 
-.genericSelectKill{
+.genericSelectPm{
     display: flex;
     flex-direction: row;
 
@@ -33,25 +34,22 @@
 
     margin: 5px 0px 5px 0px;
 }
-.genericSelectKill:hover>.showKill{
+.genericSelectPm:hover>.showPm{
     width: 20px;
 }
-.genericSelectKill:hover>.showKill>.skullIcon{
-    font-size: 20px;
-    width: 20px;
+.genericSelectPm:hover>.showPm>.handsIcon{
+    display: block;
 }
-
-.borderKillShow{
+.borderShowPm{
     height: 40px;
     width: 95px;
-    /* margin-right: 20px; */
-    background: linear-gradient(90deg, rgba(107,80,65,1) 50%, rgba(138,3,3,1) 100%);
+    
+    background: linear-gradient(90deg, rgba(107,80,65,1) 60%, rgba(0,0,0,1) 100%);
     box-shadow: 5px 5px #8e4336;
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
 }
-
-.killBut{
+.pmBut{
     width: 90px;
     height: 30px;
     margin: 5px;
@@ -65,27 +63,28 @@
     border: none;
 
     color: #6b5041;
-    background: linear-gradient(90deg, rgba(246,211,153,1) 50%, rgba(138,3,3,1) 100%);
+    background: linear-gradient(90deg, rgba(246,211,153,1) 60%, rgba(0,0,0,1) 100%);
 }
-
-.killBut>p{
+.pmBut>p{
     margin-top: 0;
     margin-bottom: 0;
 }
-
-.showKill{
+.showPm{
     width: 0px;
     height: 40px;
 
-    background-color: #8a0303;
+    background-color: #000000;
     box-shadow: 5px 5px #8e4336;
-    color: #f8c283;
+    color: #ffca79;
 
     transition: 0.2s;
 }
-.skullIcon{
-    width: 0px;
-    font-size: 0px;
+.handsIcon{
+    position: relative;
+    left: -5px;
+    display: none;
+    width: 20px;
+    font-size: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
     transition: 0.1s;
