--- a/newFront/Header/Header.css
+++ b/newFront/Header/Header.css
@@ -78,9 +78,9 @@
 #newNameInput:focus, textarea:focus{
     outline:none;
 }
-#newNameInput:hover{
+/* #newNameInput:hover{
     border:1px solid #fde1c0;
-}
+} */
 
 #sendCont{
     width: 104px;
@@ -104,7 +104,8 @@
     transition: 1s;
 }
 #sendNewName:hover{
-    border:1px solid #fde1c0;
+    /* border:1px solid #fde1c0; */
+    cursor: pointer;
 }
 
 #infoContainer{
@@ -128,6 +129,12 @@
     color: #fde1c0;
     box-shadow: 0px -10px #b25544 inset;
 }
+.copyIcon:hover{
+    cursor: pointer;
+}
+.copyIcon{
+    transition: 0.5s;
+}
 
 #initGameContainer{
     width: 110px;
@@ -138,6 +145,17 @@
 
     margin-top: auto;
     margin-bottom: auto;
+
+    transition: 0.5s;
+}
+#initGameContainer:hover>#leverCont{
+    transition: 0.5s;
+    top: 10px;
+}
+#leverCont{
+    position: relative;
+    top: 0px;
+    transition: 0.5s;
 }
 #initGame{
     position: relative;
