--- a/newFront/Hud/CardSelect/Card.css
+++ b/newFront/Hud/CardSelect/Card.css
@@ -3,12 +3,14 @@
     height: 95px;
     margin: 5px 0px 5px 0px;
     box-shadow: 5px 5px #8e4336;
+    transition: 2s;
 }
 .CardShell:hover{
     cursor: pointer;
 }
 .CardShell:hover>.buttonDiscard>.cardIcon{
     color: #f8c283;
+    transition: 0.2s;
 }
 
 .blueCard{
