--- a/newFront/Players/Player/Player.css
+++ b/newFront/Players/Player/Player.css
@@ -32,3 +32,13 @@
     
     color:#fde1c0;
 }
+
+.estadoMuerto{
+    height: 30px;
+    margin: 0px auto 0px auto;
+
+    font-size: 30px;
+    text-align: center;
+    
+    color:#8a0303;
+}
