--- a/newFront/NewsBox/NewsBox.css
+++ b/newFront/NewsBox/NewsBox.css
@@ -1,14 +1,16 @@
 #newsBoxContainer{
     width: 34%;
-    height: 150px;
+    height: 180px;
     margin: 0px 3% 0px 3%;
+
+    border-radius: 5px;
 
     background-color: #6b5041;
     box-shadow: 10px 10px #c59257;
 }
 #newsBoxBorder{
     width: 94%;
-    height: 140px;
+    height: 160px;
     margin: 5px 3% 5px 3%;
 
     border-radius: 5px;
@@ -18,7 +20,7 @@
 
 #newsBoxFlavorShell{
     width: 100%;
-    height: 70px;
+    height: 80px;
 
     border-bottom: 3px solid #6b5041;
 }
@@ -35,7 +37,7 @@
 
 #newsBoxAclarationShell{
     width: 100%;
-    height: 57px;
+    height: 67px;
 }
 #newsBoxAclaration{
     height: 37px;
