--- a/newFront/NewsBox/NewsBox.css
+++ b/newFront/NewsBox/NewsBox.css
@@ -25,9 +25,9 @@
     border-bottom: 3px solid #6b5041;
 }
 #newsBoxFlavor{
-    height: 50px;
+    height: 40px;
     width: 90%;
-    margin: 10px 5% 10px 5%;
+    margin: 0px 5% 0px 5%;
 
     color:#6b5041;
     font-size: 15px;
@@ -47,4 +47,19 @@
     color:#6b5041;
     font-size: 12px;
     text-align: center;
+}
+
+#allVotesShell{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    height: 40px;
+    width: 100%;
+}
+
+#allVotesShell>li{
+    margin: 0;
+    padding: 0;
+    font-size:12px;
 }
