--- a/newFront/NewsBox/NewsBox.css
+++ b/newFront/NewsBox/NewsBox.css
@@ -52,14 +52,18 @@
 #allVotesShell{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
     height: 40px;
     width: 100%;
 }
 
 #allVotesShell>li{
+    width: 20%;
     margin: 0;
     padding: 0;
-    font-size:12px;
+    font-size:10px;
 }
