--- a/newFront/Hud/PowerSelect/KillSelect.css
+++ b/newFront/Hud/PowerSelect/KillSelect.css
@@ -37,8 +37,7 @@
     width: 20px;
 }
 .genericSelectKill:hover>.showKill>.skullIcon{
-    font-size: 20px;
-    width: 20px;
+    display: block;
 }
 
 .borderKillShow{
@@ -85,9 +84,10 @@
 }
 .skullIcon{
     position: relative;
+    display: none;
     left: -5px;
-    width: 0px;
-    font-size: 0px;
+    width: 20px;
+    font-size: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
     transition: 0.1s;
