--- a/newFront/Hud/Hud.css
+++ b/newFront/Hud/Hud.css
@@ -10,6 +10,7 @@
     box-shadow: 10px 10px #c59257;
 
     border-top: 2px dashed #fbb969;
+    border-left: 2px dashed #fbb969;
     border-bottom: 2px dashed #c59257;
     border-right: 2px dashed #c59257;
 }
@@ -21,4 +22,20 @@
 
     /* border-left: 1px dashed #b8a38d; */
     border-right: 2px dashed #b8a38d;
+}
+
+
+@media (min-width: 2000px){
+    #HudContainer{
+        width: 900px;
+        height: 400px;
+    }
+
+    
+    .hudShell{
+        width: 446px;
+        height: 400px;
+        margin: 0px 0 0px 0;
+        border-right: 2px dashed #b8a38d;
+    }
 }
