--- a/newFront/Hud/CardSelect/Card.css
+++ b/newFront/Hud/CardSelect/Card.css
@@ -55,3 +55,33 @@
 
     transition: 2s;
 }
+
+
+
+@media (min-width: 2000px){
+    .CardShell{
+        width: 200px;
+        height: 120px;
+        margin: 10px;
+        box-shadow: 5px 5px #8e4336;
+        transition: 2s;
+    }
+    .buttonDiscard{
+        width: 170px;
+        height: 90px;
+        margin: 15px;
+        padding: 0;    
+        border-radius: 5px;
+    }
+    .cardIcon{
+        width: 50px;
+        height: 50px;
+        margin: 10px 60px 10px 55px;
+    
+        text-align: center;
+        font-size: 45px;
+    
+        transition: 2s;
+    }
+    
+}
