--- a/newFront/Hud/CardSelect/CardSelect.css
+++ b/newFront/Hud/CardSelect/CardSelect.css
@@ -31,3 +31,31 @@
     border-right: 2px dashed  #8e4336;
     border-bottom: 2px dashed  #8e4336; */
 }
+
+
+@media (min-width: 2000px){
+    #CardSelectContainer{
+        width: 420px;
+        height: 400px;
+        margin: 0px 13px 10px 13px;
+    }
+    #CardSlFlavor{
+        height: 400px;
+        width: 150px;
+        margin: 0px 10px 10px 10px;
+    
+        text-align: center;
+        font-size: 30px;
+        font-weight: bolder;
+        font-style: italic;
+    
+        color: #fde1c0;
+        box-shadow: 0px -7px #b25544 inset;
+    }
+    #CardsShell{
+        height: 400px;
+        width: 240px;
+        padding: 5px;
+    }
+    
+}
