--- a/newFront/Hud/PowerSelect/PlayerExam.css
+++ b/newFront/Hud/PowerSelect/PlayerExam.css
@@ -86,3 +86,66 @@
     margin-bottom: 10px;
     transition: 0.1s;
 }
+
+
+@media (min-width: 2000px){
+    #playerExamContainer{
+        margin-left: 10px;
+    }
+    #examSlFlavor{
+        height: 30px;
+        width: 400px;
+        margin: 0px 5px 0px 0px;
+        font-size: 27px;
+        font-weight: bold;
+        box-shadow: 0px -10px #b25544 inset;
+    }
+    #examContainer{
+        height: 350px;
+        width: 390px;
+        padding: 5px;
+        margin: 0px 5px 0px 0px;
+    }
+    
+    .genericSelectExam{
+        display: flex;
+        flex-direction: row;
+    
+        width: 190px;
+        height: 55px;
+    
+        margin: 5px 0px 5px 0px;
+    }
+    .genericSelectExam:hover>.showExam{
+        width: 30px;
+    }
+    .borderShowExam{
+        height: 55px;
+        width: 155px;
+    }
+    .examBut{
+        width: 130px;
+        height: 45px;
+        margin: 5px;
+        font-size: 25px;
+    }
+    .examBut>p{
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .showExam{
+        width: 0px;
+        height: 55px;
+    }
+    .eyeIcon{
+        position: relative;
+        top: -5px;
+        left: -10px;
+        display: none;
+        width: 30px;
+        font-size: 35px;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        transition: 0.1s;
+    }
+}
