--- a/newFront/Hud/PowerSelect/PmSelect.css
+++ b/newFront/Hud/PowerSelect/PmSelect.css
@@ -89,3 +89,65 @@
     margin-bottom: 10px;
     transition: 0.1s;
 }
+
+
+@media (min-width: 2000px){
+    #pmSelectContainer{
+        margin-left: 10px;
+    }
+    #pmSlFlavor{
+        height: 30px;
+        width: 400px;
+        margin: 0px 5px 0px 10px;
+        font-size: 22px;
+        font-weight: bold;
+        box-shadow: 0px -10px #b25544 inset;
+    }
+    #pmContainer{
+        height: 350px;
+        width: 390px;
+        padding: 5px;
+        margin: 0px 5px 0px 0px;
+    }
+    
+    .genericSelectPm{
+        display: flex;
+        flex-direction: row;
+    
+        width: 190px;
+        height: 55px;
+    
+        margin: 5px 0px 5px 0px;
+    }
+    .genericSelectPm:hover>.showPm{
+        width: 30px;
+    }
+    .borderShowPm{
+        height: 55px;
+        width: 155px;
+    }
+    .pmBut{
+        width: 130px;
+        height: 45px;
+        margin: 5px;
+        font-size: 25px;
+    }
+    .pmBut>p{
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .showPm{
+        width: 0px;
+        height: 55px;
+    }
+    .handsIcon{
+        position: relative;
+        left: -15px;
+        display: none;
+        width: 30px;
+        font-size: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        transition: 0.1s;
+    }
+}
