--- a/newFront/Hud/SelectCh/SelectCh.css
+++ b/newFront/Hud/SelectCh/SelectCh.css
@@ -79,3 +79,63 @@
     border-right: 2px dashed  #8e4336;
     border-bottom: 2px dashed  #8e4336;
 }
+
+
+
+@media (min-width: 2000px){
+    #SelectChContainer{      
+        width: 420px;
+        height: 380px;
+        margin: 0px 13px 10px 13px;
+    }
+    #chFlavor{
+        height: 25px;
+        width: 400px;
+        margin: 0px 10px 0px 10px;
+        font-size: 25px;
+    }
+    
+    #sendContainer{
+        height: 60px;
+        width: 400px;
+        margin: 0px 10px 0px 10px;
+    }
+    #selectedView{
+        height: 40px;
+        width: 280px;
+        margin: 10px;
+    
+        font-size: 30px;
+        box-shadow: 0px -20px #b25544 inset;
+    }
+    #selectedSend{
+    
+        height: 40px;
+        margin: 10px 0px 10px 0px ;
+    
+        font-size: 30px;
+    
+        background-color: transparent;
+        color: #434243;
+        box-shadow: 0px -20px #fde1c0 inset;
+    
+        border: none;
+    }
+    #selectedSend:hover{
+        cursor: pointer;
+    }
+    
+    #candidatesShell{
+        height: 260px;
+        width: 400px;
+        padding: 5px;
+        margin: 0px 10px 0px 10px;
+    
+        background-color: #F2654B;
+        box-shadow: 5px 5px #8e4336;
+    
+        border: 2px dashed  #b25544;
+        border-right: 2px dashed  #8e4336;
+        border-bottom: 2px dashed  #8e4336;
+    }
+}
