--- a/newFront/NewsBox/NewsBox.css
+++ b/newFront/NewsBox/NewsBox.css
@@ -67,3 +67,71 @@
     padding: 0;
     font-size:10px;
 }
+
+
+@media (min-width: 2000px) {
+    #newsBoxContainer{
+        width: 800px;
+        height: 360px;
+        margin: 0px 30px 0px 30px;
+    }
+    #newsBoxBorder{
+        width: 780px;
+        height: 340px;
+        margin: 10px 10px 10px 10px;
+    
+        border-radius: 5px;
+    
+        background-color: #f6d399;
+    }
+    
+    #newsBoxFlavorShell{
+        width: 100%;
+        height: 155px;
+    
+        border-bottom: 5px solid #6b5041;
+    }
+    #newsBoxFlavor{
+        height: 75px;
+        width: 90%;
+        margin: 0px 5% 0px 5%;
+    
+        color:#6b5041;
+        font-size: 30px;
+        text-align: center;
+    }
+      
+    #newsBoxAclarationShell{
+        width: 100%;
+        height: 160px;
+    }
+    #newsBoxAclaration{
+        height: 37px;
+        width: 90%;
+        margin: 10px 5% 10px 5%;
+    
+        color:#6b5041;
+        font-size: 20px;
+        text-align: center;
+    }
+    
+    #allVotesShell{
+        display: flex;
+        flex-wrap: wrap;
+    
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    
+        height: 80px;
+        width: 100%;
+    }
+    
+    #allVotesShell>li{
+        width: 20%;
+        margin: 0;
+        padding: 0;
+        font-size:20px;
+    }
+    
+}
