--- a/newFront/app.css
+++ b/newFront/app.css
@@ -10,3 +10,20 @@ body{
     flex-wrap: wrap;
     background-color: #fbb969;
 }
+
+#gameShowNHeader{
+    width: 100%;
+    margin-top: 10px;
+
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #fbb969;
+}
+
+@media (min-width: 2000px) {
+    #gameShowNHeader{
+        width: 2000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
